# Copyright (c) 2022 The Broowzer Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/. */

# Tests that do not run on Android
android_test_exception_sources = [
  "//broowzer/browser/broowzer_ads/ads_service_browsertest.cc",
  "//broowzer/browser/broowzer_ads/notification_helper/notification_helper_impl_mock.cc",
  "//broowzer/browser/broowzer_ads/notification_helper/notification_helper_impl_mock.h",
  "//broowzer/browser/broowzer_ads/search_result_ad/search_result_ad_browsertest.cc",
  "//broowzer/browser/broowzer_content_browser_client_browsertest.cc",
  "//broowzer/browser/broowzer_scheme_load_browsertest.cc",
  "//broowzer/browser/broowzer_search/broowzer_search_browsertest.cc",
  "//broowzer/browser/broowzer_shields/ad_block_service_browsertest.cc",
  "//broowzer/browser/broowzer_shields/ad_block_service_browsertest.h",
  "//broowzer/browser/broowzer_shields/broowzer_shields_web_contents_observer_browsertest.cc",
  "//broowzer/browser/broowzer_shields/cookie_expiry_browsertest.cc",
  "//broowzer/browser/broowzer_shields/domain_block_page_browsertest.cc",
  "//broowzer/browser/broowzer_shields/websockets_pool_limit_browsertest.cc",
  "//broowzer/browser/broowzer_wallet/broowzer_wallet_ethereum_chain_browsertest.cc",
  "//broowzer/browser/broowzer_wallet/broowzer_wallet_event_emitter_browsertest.cc",
  "//broowzer/browser/broowzer_wallet/broowzer_wallet_service_browsertest.cc",
  "//broowzer/browser/broowzer_wallet/broowzer_wallet_sign_message_browsertest.cc",
  "//broowzer/browser/broowzer_wallet/broowzer_wallet_tab_helper_browsertest.cc",
  "//broowzer/browser/broowzer_wallet/ethereum_provider_browsertest.cc",
  "//broowzer/browser/broowzer_wallet/send_or_sign_transaction_browsertest.cc",
  "//broowzer/browser/broowzer_wallet/solana_provider_browsertest.cc",
  "//broowzer/browser/broowzer_wallet/solana_provider_renderer_browsertest.cc",
  "//broowzer/browser/broowzer_wallet/wallet_watch_asset_browsertest.cc",
  "//broowzer/browser/content_settings/broowzer_content_settings_browsertest.cc",
  "//broowzer/browser/debounce/debounce_browsertest.cc",
  "//broowzer/browser/ephemeral_storage/blob_url_browsertest.cc",
  "//broowzer/browser/ephemeral_storage/ephemeral_storage_1p_browsertest.cc",
  "//broowzer/browser/ephemeral_storage/ephemeral_storage_1p_domain_block_browsertest.cc",
  "//broowzer/browser/ephemeral_storage/ephemeral_storage_blink_memory_cache_browsertest.cc",
  "//broowzer/browser/ephemeral_storage/ephemeral_storage_browsertest.cc",
  "//broowzer/browser/ephemeral_storage/ephemeral_storage_browsertest.h",
  "//broowzer/browser/ephemeral_storage/ephemeral_storage_qa_browsertest.cc",
  "//broowzer/browser/ephemeral_storage/hsts_partitioning_browsertest.cc",
  "//broowzer/browser/extensions/api/broowzer_theme_api_browsertest.cc",
  "//broowzer/browser/extensions/broowzer_base_local_data_files_browsertest.cc",
  "//broowzer/browser/extensions/broowzer_base_local_data_files_browsertest.h",
  "//broowzer/browser/extensions/broowzer_crx_generation_browsertest.cc",
  "//broowzer/browser/extensions/broowzer_extension_functional_test.cc",
  "//broowzer/browser/extensions/broowzer_extension_functional_test.h",
  "//broowzer/browser/extensions/broowzer_extension_provider_browsertest.cc",
  "//broowzer/browser/extensions/broowzer_theme_event_router_browsertest.cc",
  "//broowzer/browser/extensions/extension_urls_browsertest.cc",
  "//broowzer/browser/favicon/favicon_database_browsertest.cc",
  "//broowzer/browser/policy/broowzer_policy_browsertest.cc",
  "//broowzer/browser/profiles/broowzer_bookmark_model_loaded_observer_browsertest.cc",
  "//broowzer/browser/renderer_context_menu/broowzer_mock_render_view_context_menu.cc",
  "//broowzer/browser/renderer_context_menu/broowzer_mock_render_view_context_menu.h",
  "//broowzer/browser/renderer_context_menu/broowzer_spelling_menu_observer_browsertest.cc",
  "//broowzer/browser/search_engines/search_engine_provider_service_browsertest.cc",
  "//broowzer/browser/search_engines/search_engine_tracker_browsertest.cc",
  "//broowzer/browser/themes/broowzer_dark_mode_prefs_migration_browsertest.cc",
  "//broowzer/browser/themes/broowzer_theme_service_browsertest.cc",
  "//broowzer/browser/translate/broowzer_translate_browsertest.cc",
  "//broowzer/browser/ui/bookmark/bookmark_tab_helper_browsertest.cc",
  "//broowzer/browser/ui/broowzer_browser_command_controller_browsertest.cc",
  "//broowzer/browser/ui/content_settings/broowzer_autoplay_blocked_image_model_browsertest.cc",
  "//broowzer/browser/ui/toolbar/broowzer_app_menu_model_browsertest.cc",
  "//broowzer/browser/ui/webui/broowzer_wallet/wallet_panel_ui_browsertest.cc",
  "//broowzer/browser/ui/webui/broowzer_welcome_ui_browsertest.cc",
  "//broowzer/browser/ui/webui/new_tab_page/broowzer_new_tab_ui_browsertest.cc",
  "//broowzer/browser/ui/webui/private_new_tab_page/broowzer_private_new_tab_page_browsertest.cc",
  "//broowzer/browser/web_package/signed_exchange_request_browsertest.cc",
  "//broowzer/chromium_src/chrome/browser/safe_browsing/download_protection/check_client_download_request_base_browsertest.cc",
  "//broowzer/chromium_src/chrome/browser/ui/hats/hats_service_browsertest.cc",
  "//broowzer/chromium_src/chrome/browser/ui/views/location_bar/location_bar_view_browsertest.cc",
  "//broowzer/chromium_src/chrome/browser/ui/views/tabs/tab_hover_card_bubble_view_browsertest.cc",
  "//broowzer/components/broowzer_perf_predictor/browser/perf_predictor_tab_helper_browsertest.cc",
  "//broowzer/components/broowzer_rewards/browser/test/common/rewards_browsertest_context_helper.cc",
  "//broowzer/components/broowzer_rewards/browser/test/common/rewards_browsertest_context_helper.h",
  "//broowzer/components/broowzer_rewards/browser/test/common/rewards_browsertest_context_util.cc",
  "//broowzer/components/broowzer_rewards/browser/test/common/rewards_browsertest_context_util.h",
  "//broowzer/components/broowzer_rewards/browser/test/common/rewards_browsertest_contribution.cc",
  "//broowzer/components/broowzer_rewards/browser/test/common/rewards_browsertest_contribution.h",
  "//broowzer/components/broowzer_rewards/browser/test/common/rewards_browsertest_network_util.cc",
  "//broowzer/components/broowzer_rewards/browser/test/common/rewards_browsertest_network_util.h",
  "//broowzer/components/broowzer_rewards/browser/test/common/rewards_browsertest_promotion.cc",
  "//broowzer/components/broowzer_rewards/browser/test/common/rewards_browsertest_promotion.h",
  "//broowzer/components/broowzer_rewards/browser/test/common/rewards_browsertest_response.cc",
  "//broowzer/components/broowzer_rewards/browser/test/common/rewards_browsertest_response.h",
  "//broowzer/components/broowzer_rewards/browser/test/common/rewards_browsertest_util.cc",
  "//broowzer/components/broowzer_rewards/browser/test/common/rewards_browsertest_util.h",
  "//broowzer/components/broowzer_rewards/browser/test/rewards_browsertest.cc",
  "//broowzer/components/broowzer_rewards/browser/test/rewards_contribution_browsertest.cc",
  "//broowzer/components/broowzer_rewards/browser/test/rewards_flag_browsertest.cc",
  "//broowzer/components/broowzer_rewards/browser/test/rewards_notification_browsertest.cc",
  "//broowzer/components/broowzer_rewards/browser/test/rewards_p3a_browsertest.cc",
  "//broowzer/components/broowzer_rewards/browser/test/rewards_promotion_browsertest.cc",
  "//broowzer/components/broowzer_rewards/browser/test/rewards_publisher_browsertest.cc",
  "//broowzer/components/broowzer_rewards/browser/test/rewards_state_browsertest.cc",
  "//broowzer/components/broowzer_shields/browser/https_everywhere_service_browsertest.cc",
  "//broowzer/components/broowzer_shields/browser/test_filters_provider.cc",
  "//broowzer/components/content_settings/renderer/broowzer_content_settings_agent_impl_browsertest.cc",
  "//broowzer/third_party/blink/renderer/modules/broowzer/navigator_browsertest.cc",
  "//chrome/browser/extensions/browsertest_util.cc",
  "//chrome/browser/extensions/browsertest_util.h",
  "//chrome/browser/extensions/extension_browsertest.cc",
  "//chrome/browser/extensions/extension_browsertest.h",
  "//chrome/browser/extensions/extension_function_test_utils.cc",
  "//chrome/browser/extensions/extension_function_test_utils.h",
  "//chrome/browser/media/media_browsertest.cc",
  "//chrome/browser/media/media_browsertest.h",
  "//chrome/browser/ui/test/test_browser_dialog.cc",
  "//chrome/browser/ui/test/test_browser_dialog.h",
  "//chrome/browser/ui/test/test_browser_ui.cc",
  "//chrome/browser/ui/test/test_browser_ui.h",
]

android_test_exception_deps = [
  "//broowzer/browser/autoplay:browser_tests",
  "//broowzer/browser/broowzer_news:browser_tests",
  "//broowzer/browser/broowzer_rewards/test:browser_tests",
  "//broowzer/browser/browsing_data:browser_tests",
  "//broowzer/browser/decentralized_dns/test:browser_tests",
  "//broowzer/browser/extensions",
  "//broowzer/browser/farbling:browser_tests",
  "//broowzer/browser/net:browser_tests",
  "//broowzer/browser/permissions:browser_tests",
  "//broowzer/browser/test:browser_tests",
  "//broowzer/browser/ui:browser_tests",
  "//broowzer/browser/ui/tabs/test:browser_tests",
  "//broowzer/browser/ui/views/tabs:browser_tests",
  "//broowzer/components/broowzer_wallet/resources:ethereum_provider_generated_resources",
  "//broowzer/components/de_amp/browser/test:browser_tests",
  "//broowzer/components/sessions/browser:browser_tests",
  "//broowzer/renderer/skus:browser_tests",
  "//broowzer/renderer/test:browser_tests",
  "//chrome/browser/web_applications",
  "//chrome/test:test_support_ui",
  "//extensions/browser:test_support",
  "//extensions/common:common_constants",
  "//extensions/common:test_support",
  "//ui/views",
]

# Tests that run only on Android
android_only_test_sources = [
  "//chrome/test/android/browsertests_apk/android_browsertests_jni_onload.cc",
  "//chrome/test/base/android/android_browser_test_browsertest_android.cc",
]

android_only_test_deps = [
  ":test_support",
  "//android_webview/common",
  "//broowzer/browser/partnercustomizations:delegate_public_impl_java",
  "//chrome:chrome_android_core",
  "//chrome/android:app_hooks_java",
  "//chrome/android:delegate_public_impl_java",
  "//chrome/browser/flags:flags_android",
  "//chrome/browser/lens:delegate_public_impl_java",
  "//chrome/browser/locale:delegate_public_impl_java",
  "//chrome/browser/metrics:test_support",
  "//chrome/test:android_browsertests_assets",
  "//chrome/test:android_browsertests_java",
  "//chrome/test:browser_tests_runner",
  "//chrome/test:test_support",
  "//chrome/test:test_support_ui_android",
  "//components/browser_ui/widget/android:java",
  "//components/externalauth/android:google_delegate_public_impl_java",
  "//components/language/android:ulp_delegate_public_java",

  # TODO(crbug.com/961849): This is needed for ShellManager which is what
  # the ChromeBrowserTestsActivity is using to build the java UI. It's
  # likely we want to replace it with something new that uses ChromeWindow
  # and CompositorViewHolder instead.
  "//content/shell:content_shell_lib",
  "//content/test:android_test_message_pump_support",
  "//testing/android/native_test:native_test_support",
]
